gcc/testsuite/gdc.test/fail_compilation/fail318.d
/*
TEST_OUTPUT:
---
fail_compilation/fail318.d(8): Error: function D main must return int or void
---
*/

auto main() { }
